chore: update HTML standards, secure external links, and enforce HTTPS
- Add lang='en' attribute to HTML tags for accessibility

- Fix viewport meta tag syntax (add missing comma)

- Update HTTP links to HTTPS for security

- Add rel='noopener noreferrer' to external links to prevent tabnabbing

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <title>{{ page.title }}</title>
     <link rel="icon" type="image/x-icon" href="{{ '/images/hsf_logo_angled.png' | relative_url }}">
 
@@ -23,7 +23,7 @@
 <hr>
 <div class="footer fixed-bottom">
 <a href="https://github.com/HSF/hsf.github.io/edit/main/{{ page.path }}"><i class="glyphicon glyphicon-wrench"></i> Improve this page. </a>
-Thanks to <a href="https://pages.github.com/">GitHub Pages</a>, <a href="http://jekyllrb.com/">Jekyll</a> and <a href="http://getbootstrap.com/">Bootstrap</a>.
+Thanks to <a href="https://pages.github.com/">GitHub Pages</a>, <a href="https://jekyllrb.com/">Jekyll</a> and <a href="https://getbootstrap.com/">Bootstrap</a>.
 </div>
 
 </div> <!-- container -->
