--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -45,7 +45,7 @@ layout: default
         <div class="col-lg-4">
           <h2>Meetings</h2>
           <p>
-            The HSF holds <a href="{{ '/future-events.html' | relative_url }}" target="_hsf_indico">regular meetings</a>
+            The HSF holds <a href="{{ '/future-events.html' | relative_url }}" target="_hsf_indico" rel="noopener noreferrer">regular meetings</a>
             in its activity areas and has bi-weekly coordination meetings as well.
             All are welcome to join these public meetings and other HSF activities.
           </p>
